# scheduler-baraholki

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260626_0001_bootstrap_schema.py  20260626_0002_security_limits.py  20260626_0003_publish_job_idempotency.py  20260626_0004_publish_job_reliability_fields.py  20260628_0005_multi_user_owner_constraints.py
miniapp/: app.js  index.html  styles.css
miniapp/js/: api-client.js  i18n.js  telegram-webapp.js
scripts/: README.md
src/autopost_manager/: alerts.py  api.py  api_runtime.py  bot.py  config.py  crypto.py  db.py  messages.py  models.py  schedule.py  scheduler.py  schemas.py  security.py  send_errors.py  session_login.py  telegram_cleanup_client.py  telegram_client.py  telegram_dialogs.py  telegram_login.py  telegram_media.py  telegram_runtime.py  telegram_send.py  worker.py
src/autopost_manager/api/: __init__.py  application.py  routes.py
src/autopost_manager/api/rest/: __init__.py  admin.py  audit.py  chats.py  config.py  health.py  jobs.py  posts.py  sessions.py
src/autopost_manager/api/rpc/: __init__.py  account_login.py  post_actions.py  session_sync.py
src/autopost_manager/api_routes/: __init__.py  account.py  admin.py  application.py  audit.py  chats.py  config.py  health.py  helpers.py  jobs.py  posts.py  sessions.py
src/autopost_manager/cli/: session_login.py
src/autopost_manager/consumers/: scheduler.py  worker.py
src/autopost_manager/database/: __init__.py  connection.py  migrations.py
src/autopost_manager/repositories/: admin.py  audit.py  posts.py  publish_jobs.py  rate_limits.py  target_chats.py  telegram_sessions.py  user_settings.py
src/autopost_manager/schemas/: __init__.py  account.py  admin.py  audit.py  chats.py  common.py  config.py  jobs.py  posts.py
src/autopost_manager/security/: __init__.py  telegram_webapp.py
src/autopost_manager/services/: account.py  admin.py  audit.py  chats.py  draft_parser.py  drafts.py  posts.py  scheduler.py  telegram_cleanup.py  telegram_delivery.py  worker.py
tests/: conftest.py  test_alembic_setup.py  test_alerts.py  test_api.py  test_api_application.py  test_bot.py  test_code_quality_config.py  test_database_connection.py  test_miniapp_static.py  test_schedule.py  test_scheduler.py  test_schemas.py  test_security.py  test_session_login.py  test_telegram_client.py  test_worker.py
