[project]
name = "autopost-manager"
version = "0.1.0"
description = "Telegram Mini App and MTProto user-session autoposting manager"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "aiogram>=3.17,<4",
  "cryptography>=42,<47",
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "telethon>=1.38,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "pytest-xdist>=3,<4",
  "ruff>=0.8,<1",
]

[project.scripts]
autopost-api = "autopost_manager.api:main"
autopost-bot = "autopost_manager.bot:main"
autopost-scheduler = "autopost_manager.scheduler:main"
autopost-worker = "autopost_manager.worker:main"
autopost-login-session = "autopost_manager.session_login:main"
autopost-db-upgrade = "autopost_manager.db:run_migrations"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "C4", "PIE", "RET"]
ignore = [
  # FastAPI intentionally uses Depends(...) in function defaults.
  "B008",
  # Existing modules and migrations need a focused wrapping pass.
  "E501",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
